--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "build/marked"]
 	path = build/marked
-	url = https://github.com/chjj/marked.git
+	url = git://github.com/chjj/marked.git
